Small rebalance of Boss1, added code for reaper shotgun

--- a/HoloENMod/HoloENMod.csproj
+++ b/HoloENMod/HoloENMod.csproj
@@ -15,5 +15,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Items\Alloy\Weapons\" />
+    <Folder Include="Items\Bosses\" />
   </ItemGroup>
 </Project>
